# preload-tricks

./: .gitignore  CMakeLists.txt  README.md
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: clang.yml  gcc.yml
src/: example-root.c  tricks.c
